--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.6.3
+aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 certifi==2021.5.30
@@ -9,6 +9,7 @@ idna==2.10
 multidict==4.7.6
 requests==2.25.1
 riotwatcher==2.7.1
+typing-extensions==3.10.0.0
 Unidecode==1.1.1
 urllib3==1.26.5
 yarl==1.5.1
