--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,15 +1,19 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
+autopep8==1.5.7
 certifi==2021.5.30
-chardet==3.0.4
-discord-components==0.5.3
-discord.py==1.7.2
-idna==2.10
-multidict==4.7.6
-requests==2.25.1
-riotwatcher==2.7.1
-typing-extensions==3.10.0.0
-Unidecode==1.1.1
-urllib3==1.26.5
-yarl==1.5.1
+chardet==4.0.0
+charset-normalizer==2.0.4
+discord-components==2.0.5
+discord.py==1.7.3
+idna==3.2
+multidict==5.1.0
+pycodestyle==2.7.0
+requests==2.26.0
+riotwatcher==3.1.4
+toml==0.10.2
+typing-extensions==3.10.0.2
+Unidecode==1.2.0
+urllib3==1.26.6
+yarl==1.6.3
